--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "npm run build && node dist/cli.js",
+    "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updates changelog\"",
     "build": "node_modules/.bin/rimraf dist/ && node_modules/.bin/babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./npm-debug.log --copy-files",
     "prepublish": "npm run build",
-    "publish": "git push origin --tags && git push origin",
+    "publish": "git push origin --tags && npm run changelog && git push origin",
     "release:major": "npm version major && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:patch": "npm version patch && npm publish"
